zope.browser Changelog
======================

1.2 (unreleased)
----------------

- TBD

1.1 (2009-05-13)
----------------

- Moved ``IAdding`` interface here from ``zope.app.container.interfaces``
  to break undesirable dependencies.

1.0 (2009-05-13)
----------------

- Moved ``IView`` and ``IBrowserView`` interfaces here from
  ``zope.publisher.interfaces`` to break undesirable dependencies.

0.5.0 (2008-12-11)
------------------

- Moved ``ITerms`` interface here from ``zope.app.form.browser.interfaces``
  to break undesirable dependencies.