@@ -1,6 +1,4 @@
-zope.browesr README
-===================
+zope.browser
+============
 
 This package provides shared browser components for the Zope Toolkit.
-
-Please see ``src/zope/browser/README.txt`` for details.
